// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XUIDateRangeInputWIP renders component with specified dates 1`] = `
<div
  className="xui-daterangeinput"
>
  <div
    className="xui-inputgroup xui-inputgroup-horizontal xui-inputgroup-is-bottomaligned"
    data-automationid="test"
    role="group"
    style={
      Object {
        "gridTemplateColumns": "1fr 1fr 40px",
      }
    }
  >
    <div
      className="xui-dropdown--toggledwrapper"
      data-ref="toggled-wrapper"
    >
      <div
        aria-activedescendant={null}
        aria-haspopup="listbox"
        className="xui-dateinputitem"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
      >
        <div
          className="xui-daterangeinput--firstinput xui-textinputwrapper"
          onKeyDown={[Function]}
          role="presentation"
        >
          <label
            className="xui-text-label xui-fieldlabel-layout"
            data-automationid="test-daterangeinput-firstinput-dateinputitem--input--label"
            htmlFor="xui-testDateinputId-control"
          >
            Start date
          </label>
          <div
            autoComplete="off"
            className="xui-dateinputitem--input xui-textinput xui-textinput-medium"
            data-automationid="test-daterangeinput-firstinput-dateinputitem--input"
            onClick={[Function]}
          >
            <div
              className="xui-textinput--sideelement xui-textinput--sideelement-align-top xui-textinput--sideelement-icon"
              onClick={[Function]}
            >
              <div
                className="xui-iconwrapper xui-iconwrapper-medium"
              >
                <svg
                  className="xui-icon xui-icon-color-black-faint"
                  focusable="false"
                  height={13}
                  viewBox="0 0 12 13"
                  width={12}
                >
                  <path
                    d="M10 1V0H8v1H4V0H2v1H1C.5 1 0 1.5.01 2L0 12c0 .5.5 1 1 1h10c.5 0 1-.5 1-1V2c0-.5-.5-1-1-1h-1zM1 12V4h10v8H1zm6-4h3v3H7V8z"
                    role="presentation"
                  />
                </svg>
              </div>
            </div>
            <input
              aria-invalid={null}
              className="xui-textinput--input xui-textinput--input-medium"
              data-automationid="test-daterangeinput-firstinput-dateinputitem--input--input"
              id="xui-testDateinputId-control"
              onBlurCapture={[Function]}
              onChange={[Function]}
              onFocusCapture={[Function]}
              style={
                Object {
                  "maxHeight": undefined,
                }
              }
              value="5 Jun 1999"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="xui-dropdown--toggledwrapper"
      data-ref="toggled-wrapper"
    >
      <div
        aria-activedescendant={null}
        aria-haspopup="listbox"
        className="xui-dateinputitem"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
      >
        <div
          className="xui-daterangeinput--secondinput xui-textinputwrapper"
          onKeyDown={[Function]}
          role="presentation"
        >
          <label
            className="xui-text-label xui-fieldlabel-layout"
            data-automationid="test-daterangeinput-secondinput-dateinputitem--input--label"
            htmlFor="xui-testDateinputId-control"
          >
            End date
          </label>
          <div
            autoComplete="off"
            className="xui-dateinputitem--input xui-textinput xui-textinput-medium"
            data-automationid="test-daterangeinput-secondinput-dateinputitem--input"
            onClick={[Function]}
          >
            <div
              className="xui-textinput--sideelement xui-textinput--sideelement-align-top xui-textinput--sideelement-icon"
              onClick={[Function]}
            >
              <div
                className="xui-iconwrapper xui-iconwrapper-medium"
              >
                <svg
                  className="xui-icon xui-icon-color-black-faint"
                  focusable="false"
                  height={13}
                  viewBox="0 0 12 13"
                  width={12}
                >
                  <path
                    d="M10 1V0H8v1H4V0H2v1H1C.5 1 0 1.5.01 2L0 12c0 .5.5 1 1 1h10c.5 0 1-.5 1-1V2c0-.5-.5-1-1-1h-1zM1 12V4h10v8H1zm6-4h3v3H7V8z"
                    role="presentation"
                  />
                </svg>
              </div>
            </div>
            <input
              aria-invalid={null}
              className="xui-textinput--input xui-textinput--input-medium"
              data-automationid="test-daterangeinput-secondinput-dateinputitem--input--input"
              id="xui-testDateinputId-control"
              onBlurCapture={[Function]}
              onChange={[Function]}
              onFocusCapture={[Function]}
              style={
                Object {
                  "maxHeight": undefined,
                }
              }
              value="15 Dec 1999"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="xui-daterangeinput--convenience xui-dropdown--toggledwrapper"
      data-automationid="test-daterangeinput-conveniencedates"
      data-ref="toggled-wrapper"
    >
      <button
        aria-activedescendant={null}
        aria-haspopup="listbox"
        className="xui-button xui-button-split xui-button-standard xui-button-medium xui-button-grouped"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          className="xui-icon"
          focusable="false"
          height={5}
          viewBox="0 0 10 5"
          width={10}
        >
          <path
            d="M0 0l5 5 5-5z"
            role="presentation"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`XUIDateRangeInputWIP renders default component 1`] = `
<div
  className="xui-daterangeinput"
>
  <div
    className="xui-inputgroup xui-inputgroup-horizontal xui-inputgroup-is-bottomaligned"
    role="group"
    style={
      Object {
        "gridTemplateColumns": "1fr 1fr 40px",
      }
    }
  >
    <div
      className="xui-dropdown--toggledwrapper"
      data-ref="toggled-wrapper"
    >
      <div
        aria-activedescendant={null}
        aria-haspopup="listbox"
        className="xui-dateinputitem"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
      >
        <div
          className="xui-daterangeinput--firstinput xui-textinputwrapper"
          onKeyDown={[Function]}
          role="presentation"
        >
          <label
            className="xui-text-label xui-fieldlabel-layout"
            htmlFor="xui-testDateinputId-control"
          >
            Start date
          </label>
          <div
            autoComplete="off"
            className="xui-dateinputitem--input xui-textinput xui-textinput-medium"
            onClick={[Function]}
          >
            <div
              className="xui-textinput--sideelement xui-textinput--sideelement-align-top xui-textinput--sideelement-icon"
              onClick={[Function]}
            >
              <div
                className="xui-iconwrapper xui-iconwrapper-medium"
              >
                <svg
                  className="xui-icon xui-icon-color-black-faint"
                  focusable="false"
                  height={13}
                  viewBox="0 0 12 13"
                  width={12}
                >
                  <path
                    d="M10 1V0H8v1H4V0H2v1H1C.5 1 0 1.5.01 2L0 12c0 .5.5 1 1 1h10c.5 0 1-.5 1-1V2c0-.5-.5-1-1-1h-1zM1 12V4h10v8H1zm6-4h3v3H7V8z"
                    role="presentation"
                  />
                </svg>
              </div>
            </div>
            <input
              aria-invalid={null}
              className="xui-textinput--input xui-textinput--input-medium"
              id="xui-testDateinputId-control"
              onBlurCapture={[Function]}
              onChange={[Function]}
              onFocusCapture={[Function]}
              style={
                Object {
                  "maxHeight": undefined,
                }
              }
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="xui-dropdown--toggledwrapper"
      data-ref="toggled-wrapper"
    >
      <div
        aria-activedescendant={null}
        aria-haspopup="listbox"
        className="xui-dateinputitem"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
      >
        <div
          className="xui-daterangeinput--secondinput xui-textinputwrapper"
          onKeyDown={[Function]}
          role="presentation"
        >
          <label
            className="xui-text-label xui-fieldlabel-layout"
            htmlFor="xui-testDateinputId-control"
          >
            End date
          </label>
          <div
            autoComplete="off"
            className="xui-dateinputitem--input xui-textinput xui-textinput-medium"
            onClick={[Function]}
          >
            <div
              className="xui-textinput--sideelement xui-textinput--sideelement-align-top xui-textinput--sideelement-icon"
              onClick={[Function]}
            >
              <div
                className="xui-iconwrapper xui-iconwrapper-medium"
              >
                <svg
                  className="xui-icon xui-icon-color-black-faint"
                  focusable="false"
                  height={13}
                  viewBox="0 0 12 13"
                  width={12}
                >
                  <path
                    d="M10 1V0H8v1H4V0H2v1H1C.5 1 0 1.5.01 2L0 12c0 .5.5 1 1 1h10c.5 0 1-.5 1-1V2c0-.5-.5-1-1-1h-1zM1 12V4h10v8H1zm6-4h3v3H7V8z"
                    role="presentation"
                  />
                </svg>
              </div>
            </div>
            <input
              aria-invalid={null}
              className="xui-textinput--input xui-textinput--input-medium"
              id="xui-testDateinputId-control"
              onBlurCapture={[Function]}
              onChange={[Function]}
              onFocusCapture={[Function]}
              style={
                Object {
                  "maxHeight": undefined,
                }
              }
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="xui-daterangeinput--convenience xui-dropdown--toggledwrapper"
      data-ref="toggled-wrapper"
    >
      <button
        aria-activedescendant={null}
        aria-haspopup="listbox"
        className="xui-button xui-button-split xui-button-standard xui-button-medium xui-button-grouped"
        disabled={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        tabIndex={0}
        type="button"
      >
        <svg
          className="xui-icon"
          focusable="false"
          height={5}
          viewBox="0 0 10 5"
          width={10}
        >
          <path
            d="M0 0l5 5 5-5z"
            role="presentation"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
